apps/swimie-prod/swimie-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swimie-ingress
  namespace: swimie-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
	nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: api.swimie.life
    http:
	  paths:
	  - path: /
	    pathType: Prefix
		backend:
		  service:
		    name: swimie-server
			port:
			  number: 80
  tls:
    - hosts:
	  - api.swimie.life
	  secretName: swimie-cert
